<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            style="@style/DefaultCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_32"
            android:layout_marginRight="@dimen/dp_32"
            android:layout_marginTop="@dimen/dp_50">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/edtName"
                    fontPath="fonts/DroidSans.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:layout_marginLeft="@dimen/dp_32"
                    android:layout_marginRight="@dimen/dp_32"
                    android:layout_marginTop="@dimen/dp_30"
                    android:gravity="center"
                    android:hint="@string/username"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/edtPinCode"
                    fontPath="fonts/DroidSans.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/edtName"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:layout_marginLeft="@dimen/dp_32"
                    android:layout_marginRight="@dimen/dp_32"
                    android:layout_marginTop="@dimen/dp_5"
                    android:gravity="center"
                    android:hint="@string/pin_code"
                    android:inputType="text"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/edtPassword"
                    fontPath="fonts/DroidSans.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edtPinCode"
                    android:layout_marginBottom="@dimen/dp_5"
                    android:layout_marginLeft="@dimen/dp_32"
                    android:layout_marginRight="@dimen/dp_32"
                    android:layout_marginTop="@dimen/dp_5"
                    android:gravity="center"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

                <Button
                    android:id="@+id/btnLogin"
                    style="@style/BlueButton"
                    fontPath="fonts/DroidSans.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/edtPassword"
                    android:layout_marginBottom="@dimen/dp_20"
                    android:layout_marginLeft="@dimen/dp_32"
                    android:layout_marginRight="@dimen/dp_32"
                    android:layout_marginTop="@dimen/dp_20"
                    android:text="@string/login" />

                <Button
                    android:id="@+id/btnReset"
                    style="@style/OrangeButton"
                    fontPath="fonts/DroidSans.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btnLogin"
                    android:layout_marginBottom="@dimen/dp_20"
                    android:layout_marginLeft="@dimen/dp_32"
                    android:layout_marginRight="@dimen/dp_32"
                    android:text="@string/log_pin_code" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_3"
                android:background="@color/colorPrimaryDark" />
        </android.support.v7.widget.CardView>

    </ScrollView>

</RelativeLayout>