<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            style="@style/DefaultCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="50dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imv_profile"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="10dp"
                    android:adjustViewBounds="true"
                    android:background="#00000000"
                    android:scaleType="centerCrop"
                    android:src="@drawable/avatar_placeholder_300" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/imv_profile"
                    android:layout_alignLeft="@id/imv_profile"
                    android:layout_alignRight="@id/imv_profile"
                    android:layout_alignTop="@id/imv_profile"
                    android:gravity="center">

                    <ImageButton
                        android:id="@+id/edit_profile_pic"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@null"
                        android:padding="12dp"
                        android:src="@drawable/ic_border_color_black_36dp" />

                </LinearLayout>

                
                <LinearLayout
                    android:id="@+id/linearUser"
                    android:orientation="horizontal"
                    android:weightSum="4"
                    android:layout_below="@+id/imv_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edtName"
                        fontPath="fonts/DroidSans.ttf"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3.2"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="2dp"
                        android:layout_marginTop="10dp"
                        android:singleLine="true"
                        android:gravity="center"
                        android:hint="@string/username"
                        android:inputType="text" />

                    <Switch
                        android:checked="true"
                        android:id="@+id/swName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="2dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="0.8" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/linearPass"
                    android:orientation="horizontal"
                    android:weightSum="4"
                    android:layout_below="@+id/linearUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edtPassword"
                        fontPath="fonts/DroidSans.ttf"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3.2"
                        android:layout_below="@+id/edtName"
                        android:layout_marginBottom="5dp"
                        android:singleLine="true"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="2dp"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:hint="@string/password"
                        android:inputType="textPassword" />

                    <Switch
                        android:checked="false"
                        android:id="@+id/swPass"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="2dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="0.8" />

                </LinearLayout>

                <Button
                    android:id="@+id/btnChange"
                    style="@style/BlueButton"
                    fontPath="fonts/DroidSans.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linearPass"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/edit_user_profile" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/colorPrimaryDark" />
        </android.support.v7.widget.CardView>


    </ScrollView>


</RelativeLayout>